--- a/src/os2datascanner/projects/static/scss/components/_buttons.scss
+++ b/src/os2datascanner/projects/static/scss/components/_buttons.scss
@@ -189,6 +189,7 @@
   &--small {
     border-radius: var(--border-radius-button);
     padding: .5rem;
+    margin: .25rem 0;
     margin-right: .25rem;
   }
 
