--- a/src/os2datascanner/projects/static/scss/components/_datatable.scss
+++ b/src/os2datascanner/projects/static/scss/components/_datatable.scss
@@ -415,6 +415,35 @@
     font-size: small;
   }
 
+  &.links {
+    tr:first-of-type {
+
+      td {
+        border-top: none;
+      }
+      td:first-of-type {
+        border-top-left-radius: var(--border-radius-widget);
+      }
+      td:last-of-type {
+        border-top-right-radius: var(--border-radius-widget);
+      }
+    }
+
+    tr:last-of-type {
+      td:first-of-type {
+        border-bottom-left-radius: var(--border-radius-widget);
+      }
+      td:last-of-type {
+        border-bottom-right-radius: var(--border-radius-widget);
+      }
+    }
+  }
+
+  &.links tr:hover td {
+    cursor: pointer;
+    background-color: var(--color-primary-light);
+  }
+
   a:not(.button) {
     text-decoration: none;
     font-weight: 500;
