--- a/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
@@ -1,3 +1,13 @@
+{% comment %}
+This component is a 'snack bar' which displays a collection of
+messages in a pop-up area.
+
+The component depends on the following variables which must be
+set using a `with`-statement when including it in other templates:
+
+- `messages`: a collection of messages to be displayed as pop-ups.
+{% endcomment %}
+
 {# Snackbar for popup messages - Using oob swap, to support django messages #}
 <div class="message-popup-area" hx-swap-oob="afterbegin" id="snackbar">
   {% for message in messages %}
@@ -6,12 +16,8 @@
       <button type="button"
               onclick="closeSnackBar(this)"
               class="close-modal button button--modal-close"
-              title="Close">
-        <svg version="1.1" viewBox="0 0 32 32" xmlns="http://www.w3.org/2000/svg">
-          <path d="m31.708 25.708-9.708-9.708 9.708-9.708c0.105-0.105 0.18-0.227 0.229-0.357 0.133-0.356 0.057-0.771-0.229-1.057l-4.586-4.586c-0.286-0.286-0.702-0.361-1.057-0.229-0.13 0.048-0.252 0.124-0.357 0.228l-9.708 9.708-9.708-9.708c-0.105-0.104-0.227-0.18-0.357-0.228-0.356-0.133-0.771-0.057-1.057 0.229l-4.586 4.586c-0.286 0.286-0.361 0.702-0.229 1.057 0.049 0.13 0.124 0.252 0.229 0.357l9.708 9.708-9.708 9.708c-0.104 0.105-0.18 0.227-0.229 0.357-0.133 0.355-0.057 0.771 0.229 1.057l4.586 4.586c0.286 0.286 0.702 0.361 1.057 0.229 0.13-0.049 0.252-0.124 0.357-0.229l9.708-9.708 9.708 9.708c0.105 0.105 0.227 0.18 0.357 0.229 0.356 0.133 0.771 0.057 1.057-0.229l4.586-4.586c0.286-0.286 0.362-0.702 0.229-1.057-0.049-0.13-0.124-0.252-0.229-0.357z">
-          </path>
-        </svg>
-      </button>
+              title="Close"></button>
+      <img src="/static/svg/snackbar.svg" alt="" />
     </div>
   {% endfor %}
 </div>
