--- a/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
@@ -17,7 +17,7 @@ set using a `with`-statement when including it in other templates:
               onclick="closeSnackBar(this)"
               class="close-modal button button--modal-close"
               title="Close"></button>
-      <img src="{% static 'svg/snackbar.svg' %}" alt="" />
+      <img src="{% static 'svg/snackbar.svg' %}" alt="close pop-up" />
     </div>
   {% endfor %}
 </div>
