--- a/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/modals/snackbar.html
@@ -1,3 +1,6 @@
+{% load static %}
+{% load i18n %}
+
 {% comment %}
 This component is a 'snack bar' which displays a collection of
 messages in a pop-up area.
