[#57627] Implement jQuery select2 for assigning remediators, and small improvements to UI
[#57627] Pagination and search in account list

[#57627] Show universal remediators on scanner forms

[#57627] Added checkmark for universal remediator on account page

[#57627] Cached properties, organization-scope, and help-text in scanner form

The Account-properties "is_dpo" and "is_leader" have been converted to cached properties.
The remediator and universal remediator fields in the scanner form now have help text.
The list of universal remediators shown on the scanner form are now only the remediators associated with the user's organization.

[#57627] Moved 'universal_remediator'-property to core app

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/pagination/load_results.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/pagination/load_results.html
@@ -15,7 +15,7 @@
       hx-target=".content"
       hx-select=".content"
       hx-swap="outerHTML"
-      hx-include="[id='errorlog_filters'], [id='orgunit_filters']"
+      hx-include="[id='errorlog_filters'], [id='orgunit_filters'], [id='account_filters']"
       hx-get="{{ request.path }}">
 
   <input type="hidden" name="page" id="page" value={{ page_obj.number }}>
