--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/account_detail.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/account_detail.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-  {% include "partials/breadcrumb.html" with page="account" %}
+  {% include "components/common/breadcrumb.html" with page="account" %}
 
   <h1 class="userprofile-text">{% trans "Account" %}</h1>
 
@@ -60,24 +60,6 @@
               </ul>
             </td>
           </tr>
-          <tr>
-            <td>{% trans "Contact Person" %}</td>
-            <td class="ds-checkbox">
-              <input type="checkbox"
-                     name="contact_check"
-                     id="contact_check"
-                     value="checked"
-                     hx-post=""
-                     hx-trigger="change"
-                     hx-swap="afterend"
-                     hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                     hx-include='#contact_check'
-                     {% if account.contact_person %}checked{% endif %}>
-              <label for="contact_check"
-                     title="{% trans "By checking this box, users will be presented with your email address for DPO-related questions." %}">
-              </label>
-            </td>
-          </tr>
         {% endif %}
       </tbody>
     </table>
@@ -105,54 +87,73 @@
           </td>
         </tr>
         <tr>
-          <td>{% trans "Remediator for" %}</td>
-          <td>
-            <ul>
-              {% for scanner in remediator_for_scanners %}
-                <li class="dynamic_li"
-                    title="{% trans "Click to remove" %} {{ scanner.name }}."
-                    hx-post=""
-                    hx-swap="outerHTML"
-                    hx-target=".content"
-                    hx-select=".content"
-                    hx-trigger="click"
-                    hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                    hx-vals='{"account": "{{ account.uuid }}", "rem-remediator": "{{ scanner.pk }}"}'
-                    hx-confirm="{% trans "Are you sure you want to remove" %} {{ scanner.name }}?">
-                  {{ scanner.name }}
-                </li>
-              {% endfor %}
-              {% if scanners %}
-                <li class="add_remediator">
-                  <button type="button" class="add_button button button--small">
-                    <svg class="icon">
-                      <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
-                    </svg>
-                  </button>
-                  <select class="select_options"
-                          name="add-remediator"
-                          hidden
-                          hx-post=""
-                          hx-swap="outerHTML"
-                          hx-target=".content"
-                          hx-select=".content"
-                          hx-trigger="change"
-                          hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
-                          hx-vals='{"account": "{{ account.pk }}"}'>
-                    <option value="">{% trans "Choose scannerjob" %}</option>
-                    {% for scanner in scanners %}<option value="{{ scanner.pk }}">{{ scanner.name }}</option>{% endfor %}
-                  </select>
-                </li>
-              {% endif %}
-            </ul>
+          <td>{% trans "Universal remediator" %}</td>
+          <td class="ds-checkbox">
+            <input type="checkbox"
+                   name="remediator-check"
+                   id="remediator-check"
+                   autocomplete="off"
+                   hx-post=""
+                   hx-trigger="change"
+                   hx-swap="outerHTML"
+                   hx-target=".content"
+                   hx-select=".content"
+                   hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                   hx-include='#remediator-check'
+                   {% if account.universal_remediator %}checked{% endif %}>
+            <label for="remediator-check"
+                   title="{% trans "By checking this box, the current user will be assigned as a remediator of all scannerjobs." %}">
+            </label>
           </td>
         </tr>
+        {% if not account.universal_remediator %}
+          <tr>
+            <td>{% trans "Remediator for" %}</td>
+            <td>
+              <ul>
+                {% for scanner in remediator_for_scanners %}
+                  <li class="dynamic_li"
+                      title="{% trans "Click to remove" %} {{ scanner.name }}."
+                      name="rem-remediator"
+                      hx-post=""
+                      hx-swap="outerHTML"
+                      hx-target=".content"
+                      hx-select=".content"
+                      hx-trigger="click"
+                      hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                      hx-vals='{"account": "{{ account.uuid }}", "rem-remediator": "{{ scanner.pk }}"}'
+                      hx-confirm="{% trans "Are you sure you want to remove" %} {{ scanner.name }}?">
+                    {{ scanner.name }}
+                  </li>
+                {% endfor %}
+                {% if scanners %}
+                  <li class="add_remediator">
+                    <button type="button" class="add_button button button--small">
+                      <svg class="icon">
+                        <use xlink:href="/static/svg/symbol-defs.svg#icon-plus"></use>
+                      </svg>
+                    </button>
+                    <select class="select_options"
+                            name="add-remediator"
+                            hidden
+                            hx-post=""
+                            hx-swap="outerHTML"
+                            hx-target=".content"
+                            hx-select=".content"
+                            hx-trigger="change"
+                            hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
+                            hx-vals='{"account": "{{ account.pk }}"}'>
+                      <option value="">{% trans "Choose scannerjob" %}</option>
+                      {% for scanner in scanners %}<option value="{{ scanner.pk }}">{{ scanner.name }}</option>{% endfor %}
+                    </select>
+                  </li>
+                {% endif %}
+              </ul>
+            </td>
+          </tr>
+        {% endif %}
       </tbody>
     </table>
-
-    {% if has_categorize_permission %}
-      {% include "components/outlook_category_settings.html" %}
-    {% endif %}
 
     <h2>{% trans "Login Information" %}</h2>
     <table class="userprofile-table login-info">
