--- a/src/os2datascanner/projects/static/scss/components/_forms.scss
+++ b/src/os2datascanner/projects/static/scss/components/_forms.scss
@@ -534,3 +534,21 @@
 .csv_export_wrapper {
   margin: 1rem;
 }
+
+.account_links {
+  line-height: 2rem;
+
+  .account_link {
+    color: var(--color-text-main);
+    text-decoration: none;
+    padding: 3px;
+    border: 1px solid var(--color-text-main);
+    border-radius: 4px;
+    margin: 0 0.2rem;
+    cursor: pointer;
+
+  &:hover {
+    background-color: var(--color-primary-light);
+  }
+}
+}
