--- a/src/os2datascanner/projects/static/scss/components/_recurrence.scss
+++ b/src/os2datascanner/projects/static/scss/components/_recurrence.scss
@@ -236,3 +236,58 @@ div.recurrence-widget .section {
     margin-right: 0.5rem !important;
   }
 }
+
+// style adjustments for the "repeat until "calendar inside the recurrence widget
+
+table.recurrence-calendar {
+  .recurrence-calendar_header {
+    display: grid;
+    grid-template-columns: 1fr 2fr 1fr;
+    padding-top: 0.125rem;
+
+    .remove-btn_container {
+      justify-self: start;
+    }
+  
+    .remove, .remove:link {
+      padding: 0.1em 0.4em 0.25em !important;
+      float: none !important;
+    }
+  
+    .year {
+      padding-right: 0 !important;
+      font-size: 1rem;
+      color: var(--color-text-secondary);
+    }
+  }
+
+  .navigation-calendar {
+    border-right: none !important;
+
+    td.recurrence-label {
+      font-size: 1.125rem;
+      width: 8rem;
+    }
+
+    a, a:link {
+      text-decoration: none;
+      color: var(--color-text-secondary);
+    }    
+  
+    a:hover {
+      color: var(--color-primary-dark);
+      text-decoration: underline var(--color-primary-dark);
+    }
+  }
+
+  .body {
+    td.header, td.day {
+      padding: 0.5em !important;
+    }
+  }
+
+  .footer {
+    line-height: 0 !important;
+    padding: 0 !important;
+  }
+}
